[gd_scene load_steps=70 format=2]

[ext_resource path="res://assets/art/props/collectibles/GemsAndHearts.png" type="Texture" id=1]
[ext_resource path="res://src/objects/Gem.gd" type="Script" id=2]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0065.png" type="Texture" id=3]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0055.png" type="Texture" id=4]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0054.png" type="Texture" id=5]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0058.png" type="Texture" id=6]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0053.png" type="Texture" id=7]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0059.png" type="Texture" id=8]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0060.png" type="Texture" id=9]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0063.png" type="Texture" id=10]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0052.png" type="Texture" id=11]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0056.png" type="Texture" id=12]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0064.png" type="Texture" id=13]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0057.png" type="Texture" id=14]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0001.png" type="Texture" id=15]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0002.png" type="Texture" id=16]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0003.png" type="Texture" id=17]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0000.png" type="Texture" id=18]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0012.png" type="Texture" id=19]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0014.png" type="Texture" id=20]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0013.png" type="Texture" id=21]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0015.png" type="Texture" id=22]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0011.png" type="Texture" id=23]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0016.png" type="Texture" id=24]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0004.png" type="Texture" id=25]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0005.png" type="Texture" id=26]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0006.png" type="Texture" id=27]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0007.png" type="Texture" id=28]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0008.png" type="Texture" id=29]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0009.png" type="Texture" id=30]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0010.png" type="Texture" id=31]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0043.png" type="Texture" id=32]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0021.png" type="Texture" id=33]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0018.png" type="Texture" id=34]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0038.png" type="Texture" id=35]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0037.png" type="Texture" id=36]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0040.png" type="Texture" id=37]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0044.png" type="Texture" id=38]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0046.png" type="Texture" id=39]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0047.png" type="Texture" id=40]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0048.png" type="Texture" id=41]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0049.png" type="Texture" id=42]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0051.png" type="Texture" id=43]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0030.png" type="Texture" id=44]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0050.png" type="Texture" id=45]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0024.png" type="Texture" id=46]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0029.png" type="Texture" id=47]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0045.png" type="Texture" id=48]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0017.png" type="Texture" id=49]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0023.png" type="Texture" id=50]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0028.png" type="Texture" id=51]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0032.png" type="Texture" id=52]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0027.png" type="Texture" id=53]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0019.png" type="Texture" id=54]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0033.png" type="Texture" id=55]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0034.png" type="Texture" id=56]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0020.png" type="Texture" id=57]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0026.png" type="Texture" id=58]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0035.png" type="Texture" id=59]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0036.png" type="Texture" id=60]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0039.png" type="Texture" id=61]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0031.png" type="Texture" id=62]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0022.png" type="Texture" id=63]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0025.png" type="Texture" id=64]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0041.png" type="Texture" id=65]
[ext_resource path="res://assets/art/effects/multi_sparkle_puff/frames/frame0042.png" type="Texture" id=66]
[ext_resource path="res://assets/sounds/511385__mrthenoronha__power-up-8-bit.wav" type="AudioStream" id=67]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.1875
height = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 49 ), ExtResource( 34 ), ExtResource( 54 ), ExtResource( 57 ), ExtResource( 33 ), ExtResource( 63 ), ExtResource( 50 ), ExtResource( 46 ), ExtResource( 64 ), ExtResource( 58 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 47 ), ExtResource( 44 ), ExtResource( 62 ), ExtResource( 52 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 61 ), ExtResource( 37 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 48 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 45 ), ExtResource( 43 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[node name="Gem" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 1 )
vframes = 5
hframes = 5
frame = 2

[node name="EffectAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="EffectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 67 )
[connection signal="body_entered" from="." to="." method="_on_Gem_body_entered"]
[connection signal="animation_finished" from="EffectAnimation" to="." method="_on_EffectAnimation_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
